--- a/html/django_atrium/index.html
+++ b/html/django_atrium/index.html
@@ -44,7 +44,7 @@
 </dd>
 <dt><code class="name"><a title="django_atrium.institution" href="institution.html">django_atrium.institution</a></code></dt>
 <dd>
-<section class="desc"></section>
+<section class="desc"><p>institution file.</p></section>
 </dd>
 <dt><code class="name"><a title="django_atrium.member" href="member.html">django_atrium.member</a></code></dt>
 <dd>
