--- a/html/django_atrium/index.html
+++ b/html/django_atrium/index.html
@@ -56,7 +56,7 @@
 </dd>
 <dt><code class="name"><a title="django_atrium.user" href="user.html">django_atrium.user</a></code></dt>
 <dd>
-<section class="desc"></section>
+<section class="desc"><p>user file.</p></section>
 </dd>
 </dl>
 </section>
