--- a/html/django_atrium/institution.html
+++ b/html/django_atrium/institution.html
@@ -42,7 +42,8 @@ class Institution:
         &#34;&#34;&#34;Read an institution.
 
         Args:
-            institution_code: A unique identifier for each institution, defined by MX.
+            institution_code: A unique identifier for each institution,
+                defined by MX.
 
         Returns:
             An Atrium institution.
@@ -55,10 +56,10 @@ class Institution:
         &#34;&#34;&#34;List all the institutions.
 
         Args:
-            **name: Only institutions whose name contains the appended string will
-                be returned.
-            **supports_account_identification: A boolean to only show institutions
-                which support identity will be returned.
+            **name: Only institutions whose name contains the appended string
+                will be returned.
+            **supports_account_identification: A boolean to only show
+                institutions which support identity will be returned.
             **supports_account_statement: A boolean to only show institutions
                 which offer access to account statements will be returned.
             supports_account_verification: A boolean to only show institutions
@@ -77,7 +78,8 @@ class Institution:
         &#34;&#34;&#34;Read an institution&#39;s credentials.
 
         Args:
-            institution_code: A unique identifier for each institution, defined by MX.
+            institution_code: A unique identifier for each institution,
+                defined by MX.
 
         Returns:
             A list of an Atrium Institutions&#39;s credentials.
@@ -118,7 +120,8 @@ class Institution:
         &#34;&#34;&#34;Read an institution.
 
         Args:
-            institution_code: A unique identifier for each institution, defined by MX.
+            institution_code: A unique identifier for each institution,
+                defined by MX.
 
         Returns:
             An Atrium institution.
@@ -131,10 +134,10 @@ class Institution:
         &#34;&#34;&#34;List all the institutions.
 
         Args:
-            **name: Only institutions whose name contains the appended string will
-                be returned.
-            **supports_account_identification: A boolean to only show institutions
-                which support identity will be returned.
+            **name: Only institutions whose name contains the appended string
+                will be returned.
+            **supports_account_identification: A boolean to only show
+                institutions which support identity will be returned.
             **supports_account_statement: A boolean to only show institutions
                 which offer access to account statements will be returned.
             supports_account_verification: A boolean to only show institutions
@@ -153,7 +156,8 @@ class Institution:
         &#34;&#34;&#34;Read an institution&#39;s credentials.
 
         Args:
-            institution_code: A unique identifier for each institution, defined by MX.
+            institution_code: A unique identifier for each institution,
+                defined by MX.
 
         Returns:
             A list of an Atrium Institutions&#39;s credentials.
@@ -177,11 +181,11 @@ class Institution:
 <h2 id="args">Args</h2>
 <dl>
 <dt><strong><code>**name</code></strong></dt>
-<dd>Only institutions whose name contains the appended string will
-be returned.</dd>
+<dd>Only institutions whose name contains the appended string
+will be returned.</dd>
 <dt><strong><code>**supports_account_identification</code></strong></dt>
-<dd>A boolean to only show institutions
-which support identity will be returned.</dd>
+<dd>A boolean to only show
+institutions which support identity will be returned.</dd>
 <dt><strong><code>**supports_account_statement</code></strong></dt>
 <dd>A boolean to only show institutions
 which offer access to account statements will be returned.</dd>
@@ -202,10 +206,10 @@ which offer an extended transaction history will be returned.</dd>
     &#34;&#34;&#34;List all the institutions.
 
     Args:
-        **name: Only institutions whose name contains the appended string will
-            be returned.
-        **supports_account_identification: A boolean to only show institutions
-            which support identity will be returned.
+        **name: Only institutions whose name contains the appended string
+            will be returned.
+        **supports_account_identification: A boolean to only show
+            institutions which support identity will be returned.
         **supports_account_statement: A boolean to only show institutions
             which offer access to account statements will be returned.
         supports_account_verification: A boolean to only show institutions
@@ -229,7 +233,8 @@ which offer an extended transaction history will be returned.</dd>
 <h2 id="args">Args</h2>
 <dl>
 <dt><strong><code>institution_code</code></strong></dt>
-<dd>A unique identifier for each institution, defined by MX.</dd>
+<dd>A unique identifier for each institution,
+defined by MX.</dd>
 </dl>
 <h2 id="returns">Returns</h2>
 <p>A list of an Atrium Institutions's credentials.</p></section>
@@ -241,7 +246,8 @@ which offer an extended transaction history will be returned.</dd>
     &#34;&#34;&#34;Read an institution&#39;s credentials.
 
     Args:
-        institution_code: A unique identifier for each institution, defined by MX.
+        institution_code: A unique identifier for each institution,
+            defined by MX.
 
     Returns:
         A list of an Atrium Institutions&#39;s credentials.
@@ -260,7 +266,8 @@ which offer an extended transaction history will be returned.</dd>
 <h2 id="args">Args</h2>
 <dl>
 <dt><strong><code>institution_code</code></strong></dt>
-<dd>A unique identifier for each institution, defined by MX.</dd>
+<dd>A unique identifier for each institution,
+defined by MX.</dd>
 </dl>
 <h2 id="returns">Returns</h2>
 <p>An Atrium institution.</p></section>
@@ -272,7 +279,8 @@ which offer an extended transaction history will be returned.</dd>
     &#34;&#34;&#34;Read an institution.
 
     Args:
-        institution_code: A unique identifier for each institution, defined by MX.
+        institution_code: A unique identifier for each institution,
+            defined by MX.
 
     Returns:
         An Atrium institution.
