should be closed to finished with documentation

--- a/html/django_atrium/connect_widget.html
+++ b/html/django_atrium/connect_widget.html
@@ -56,7 +56,7 @@ class ConnectWidget:
                 provided members credentials.
 
         Returns:
-            user: An Atrium user&#39;s connect widget.
+            An Atrium user&#39;s connect widget.
 
         &#34;&#34;&#34;
         body = atrium.ConnectWidgetRequestBody(**kwargs)
@@ -111,7 +111,7 @@ class ConnectWidget:
                 provided members credentials.
 
         Returns:
-            user: An Atrium user&#39;s connect widget.
+            An Atrium user&#39;s connect widget.
 
         &#34;&#34;&#34;
         body = atrium.ConnectWidgetRequestBody(**kwargs)
@@ -153,10 +153,7 @@ current_member_guid to load into a state to update the
 provided members credentials.</dd>
 </dl>
 <h2 id="returns">Returns</h2>
-<dl>
-<dt><strong><code>user</code></strong></dt>
-<dd>An Atrium user's connect widget.</dd>
-</dl></section>
+<p>An Atrium user's connect widget.</p></section>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -181,7 +178,7 @@ provided members credentials.</dd>
             provided members credentials.
 
     Returns:
-        user: An Atrium user&#39;s connect widget.
+        An Atrium user&#39;s connect widget.
 
     &#34;&#34;&#34;
     body = atrium.ConnectWidgetRequestBody(**kwargs)
