--- a/html/django_atrium/index.html
+++ b/html/django_atrium/index.html
@@ -36,7 +36,7 @@
 </dd>
 <dt><code class="name"><a title="django_atrium.atrium" href="atrium.html">django_atrium.atrium</a></code></dt>
 <dd>
-<section class="desc"></section>
+<section class="desc"><p>atrium file.</p></section>
 </dd>
 <dt><code class="name"><a title="django_atrium.connect_widget" href="connect_widget.html">django_atrium.connect_widget</a></code></dt>
 <dd>
@@ -48,11 +48,11 @@
 </dd>
 <dt><code class="name"><a title="django_atrium.member" href="member.html">django_atrium.member</a></code></dt>
 <dd>
-<section class="desc"></section>
+<section class="desc"><p>member file.</p></section>
 </dd>
 <dt><code class="name"><a title="django_atrium.transaction" href="transaction.html">django_atrium.transaction</a></code></dt>
 <dd>
-<section class="desc"></section>
+<section class="desc"><p>transaction file.</p></section>
 </dd>
 <dt><code class="name"><a title="django_atrium.user" href="user.html">django_atrium.user</a></code></dt>
 <dd>
